--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /**
  * MAIN CSS
  * Author:  Christopher Collins
- * Version: 1.1.0
+ * Version: 2.0
  * License: none (public domain)
  */
 /*------------------------------------------------------
@@ -273,6 +273,7 @@ hr {
 
 .hero.card {
   border: 1px solid var(--body-text);
+  background-color: rgba(255, 255, 255, 0.65);
   cursor: pointer;
 }
 
